remove virtualthreads