@@ -48,7 +48,7 @@ public class SparkCodeSubmissionDriverPlugin implements org.apache.spark.api.plu
 
     public SparkCodeSubmissionDriverPlugin(int port) {
         this.port = port;
-        virtualThreads = Executors.newVirtualThreadPerTaskExecutor();
+        virtualThreads = Executors.newFixedThreadPool(10);
     }
 
     public int getPort() {
